[project]
name = "ca-vntl-helper"
version = "0.0.1"
authors = [
  { name="Bui Ngoc Huy Van", email="bui_ngoc_huy_van@ca-adv.co.jp" },
]
description = "Some useful functions, classes to help work. Create by Van of Techlab CA team."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/vanbnh/ca-vntl-helper"
Issues = "https://github.com/vanbnh/ca-vntl-helper/issues"